# FCT-AutoQuery

./: .flake8  .gh_pr_body.md  .gitignore  .pr_comment.txt  .pre-commit-config.yaml  CHANGELOG.md  CONSTITUTION.md  LICENSE  MEMO_EXTRACTION_FIX_REPORT.md  MODEL_CONFIG.md  NEW_DATETIME_FIELDS_SUMMARY.md  PULL_REQUEST.md  PULL_REQUEST_BODY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  USAGE_GUIDE.md  compare_before_after.py  config.example.analysis.toml  config.example.toml  config.llm.toml  config.toml  coverage_metrics.xml  demo.py  example_cases.txt  final_verification_report.md  main.py  metrics_tests.xml  mypy.ini  output_tee.txt  pyproject.toml  pytest.ini  requirements.txt  test_simplified_tracking.py  test_statistics_integration.py  test_status_fix.py  test_status_update.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
docs/: 0005-statistics-implementation.md  0006-case-tracking-service-design.md  0006-case-tracking-simplified-design.md  CODING_STANDARDS.md  CONFIG_CENTRALIZATION_SUMMARY.md  ENHANCED_LOGGING_SUMMARY.md  FULL_JSON_IMPLEMENTATION_SUMMARY.md  GIT_WORKFLOW.md  LLM_CONFIG_GUIDE.md  LLM_FALLBACK_IMPLEMENTATION_SUMMARY.md  LLM_INPUT_METHOD_COMPARISON.md  OLLAMA_PROCESS_TEST_REPORT.md  OLLAMA_SESSION_MANAGEMENT.md  README.md  SAFE_LLM_IMPLEMENTATION_SUMMARY.md  analysis-table-architecture.md  batch-processing-optimization.md  batch_tracking_integration.py  case_analysis_field_rules.md  case_tracking_guide.md  case_tracking_schema.sql  changes-0051-modification-guide.md  chg-002-critical-issues.md  chg-003-yearly-data-purge.md  (+18 more)
(+289 files in other folders)
